# libyodle

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  channel.cpp  channel.hpp  libyodle.pc.in  logger.cpp  logger.hpp  message.cpp  message.hpp  types.hpp  yodle.hpp
src/internals/: logger.cpp  logger.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp
tests/: CMakeLists.txt  channel.cpp  message.cpp
